--- a/test-output/index.html
+++ b/test-output/index.html
@@ -161,11 +161,11 @@
             <pre>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;http://testng.org/testng-1.0.dtd&quot;&gt;
-&lt;suite thread-count=&quot;2&quot; parallel=&quot;classes&quot; name=&quot;Suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
-  &lt;test thread-count=&quot;2&quot; parallel=&quot;classes&quot; name=&quot;Test&quot;&gt;
+&lt;suite parallel=&quot;classes&quot; name=&quot;Suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
+  &lt;test thread-count=&quot;5&quot; parallel=&quot;classes&quot; name=&quot;Test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;KEYWORDSFramework.Test.PrincipalTest&quot;/&gt;
       &lt;class name=&quot;POMFramework.Test.LoginTest&quot;/&gt;
+      &lt;class name=&quot;KEYWORDSFramework.Test.PrincipalTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Test --&gt;
 &lt;/suite&gt; &lt;!-- Suite --&gt;
@@ -209,16 +209,16 @@ data.addRows(2);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'Principal_testcase')
 data.setCell(0, 2, 'KEYWORDSFramework.Test.PrincipalTest')
-data.setCell(0, 3, 15242);
+data.setCell(0, 3, 12248);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'LoginSuccess_testcase')
 data.setCell(1, 2, 'POMFramework.Test.LoginTest')
-data.setCell(1, 3, 4099);
+data.setCell(1, 3, 1041);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 19 seconds</span>
+              <span class="suite-total-time">Total running time: 13 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -254,15 +254,15 @@ return data;
               <div class="chronological-class-name">POMFramework.Test.LoginTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">SetUp</span>
-                <span class="method-start">15432 ms</span>
+                <span class="method-start">12437 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">LoginSuccess_testcase</span>
-                <span class="method-start">48457 ms</span>
+                <span class="method-start">29310 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">Quit</span>
-                <span class="method-start">52564 ms</span>
+                <span class="method-start">30357 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
