--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="96bcfa">  <td>21/05/20 21:32:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PrincipalTest.Principal_testcase()[pri:0, instance:KEYWORDSFramework.Test.PrincipalTest@2313052e]">Principal_testcase</td> 
-  <td>TestNG-test=Test-1@334697208</td>   <td></td> </tr>
-<tr bgcolor="6db3fb">  <td>21/05/20 21:33:14</td>   <td>15433</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.SetUp()[pri:0, instance:POMFramework.Test.LoginTest@2bd2b28e]">&gt;&gt;SetUp</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Test-2@2087092292</td>   <td></td> </tr>
-<tr bgcolor="6db3fb">  <td>21/05/20 21:33:47</td>   <td>48458</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.LoginSuccess_testcase()[pri:1, instance:POMFramework.Test.LoginTest@2bd2b28e]">LoginSuccess_testcase</td> 
-  <td>TestNG-test=Test-2@2087092292</td>   <td></td> </tr>
-<tr bgcolor="6db3fb">  <td>21/05/20 21:33:51</td>   <td>52566</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.Quit()[pri:0, instance:POMFramework.Test.LoginTest@2bd2b28e]">&lt;&lt;Quit</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Test-2@2087092292</td>   <td></td> </tr>
+<tr bgcolor="b5e8bb">  <td>21/05/21 02:16:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PrincipalTest.Principal_testcase()[pri:0, instance:KEYWORDSFramework.Test.PrincipalTest@58c34bb3]">Principal_testcase</td> 
+  <td>TestNG-test=Test-1@748158334</td>   <td></td> </tr>
+<tr bgcolor="9fda69">  <td>21/05/21 02:16:52</td>   <td>12437</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.SetUp()[pri:0, instance:POMFramework.Test.LoginTest@73163d48]">&gt;&gt;SetUp</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-2@1379786955</td>   <td></td> </tr>
+<tr bgcolor="9fda69">  <td>21/05/21 02:17:09</td>   <td>29310</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.LoginSuccess_testcase()[pri:1, instance:POMFramework.Test.LoginTest@73163d48]">LoginSuccess_testcase</td> 
+  <td>TestNG-test=Test-2@1379786955</td>   <td></td> </tr>
+<tr bgcolor="9fda69">  <td>21/05/21 02:17:10</td>   <td>30357</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.Quit()[pri:0, instance:POMFramework.Test.LoginTest@73163d48]">&lt;&lt;Quit</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-2@1379786955</td>   <td></td> </tr>
 </table>
