--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,11 +9,13 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">45.802</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">61.070</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">KEYWORDSFramework.Test.PrincipalTest</td><td><a href="#m0">Principal_testcase</a></td><td rowspan="1">1621615729111</td><td rowspan="1">20216</td></tr><tr class="passedodd"><td rowspan="1">POMFramework.Test.LoginTest</td><td><a href="#m1">LoginSuccess_testcase</a></td><td rowspan="1">1621615767123</td><td rowspan="1">6712</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">KEYWORDSFramework.Test.PrincipalTest</td><td><a href="#m0">Principal_testcase</a></td><td rowspan="1">1621627054013</td><td rowspan="1">23529</td></tr><tr class="passedodd"><td rowspan="3">POMFramework.Test.LoginTest</td><td><a href="#m1">LoginSuccess_testcase</a></td><td rowspan="1">1621627077810</td><td rowspan="1">15469</td></tr><tr class="passedodd"><td><a href="#m2">editMyInfo</a></td><td rowspan="1">1621627093295</td><td rowspan="1">9293</td></tr><tr class="passedodd"><td><a href="#m3">seeManageReviewsMyReviews</a></td><td rowspan="1">1621627102593</td><td rowspan="1">1200</td></tr></tbody>
 </table>
 <h2>Test</h2><h3 id="m0">KEYWORDSFramework.Test.PrincipalTest#Principal_testcase</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m1">POMFramework.Test.LoginTest#LoginSuccess_testcase</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">POMFramework.Test.LoginTest#editMyInfo</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">POMFramework.Test.LoginTest#seeManageReviewsMyReviews</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
