--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,12 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9fda69">  <td>21/05/21 10:49:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.LoginSuccess_testcase()[pri:1, instance:POMFramework.Test.LoginTest@73163d48]">LoginSuccess_testcase</td> 
-  <td>TestNG-test=Test-2@1107640478</td>   <td></td> </tr>
-<tr bgcolor="b5e8bb">  <td>21/05/21 10:48:49</td>   <td>-38013</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PrincipalTest.Principal_testcase()[pri:0, instance:KEYWORDSFramework.Test.PrincipalTest@58c34bb3]">Principal_testcase</td> 
-  <td>TestNG-test=Test-1@128083930</td>   <td></td> </tr>
-<tr bgcolor="9fda69">  <td>21/05/21 10:49:33</td>   <td>6723</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.Quit()[pri:0, instance:POMFramework.Test.LoginTest@73163d48]">&lt;&lt;Quit</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Test-2@1107640478</td>   <td></td> </tr>
-<tr bgcolor="9fda69">  <td>21/05/21 10:49:09</td>   <td>-17610</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.SetUp()[pri:0, instance:POMFramework.Test.LoginTest@73163d48]">&gt;&gt;SetUp</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Test-2@1107640478</td>   <td></td> </tr>
+<tr bgcolor="9fda69">  <td>21/05/21 13:57:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.LoginSuccess_testcase()[pri:1, instance:POMFramework.Test.LoginTest@73163d48]">LoginSuccess_testcase</td> 
+  <td>TestNG-test=Test-2@771582826</td>   <td></td> </tr>
+<tr bgcolor="b5e8bb">  <td>21/05/21 13:57:34</td>   <td>-23795</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PrincipalTest.Principal_testcase()[pri:0, instance:KEYWORDSFramework.Test.PrincipalTest@58c34bb3]">Principal_testcase</td> 
+  <td>TestNG-test=Test-1@1014739554</td>   <td></td> </tr>
+<tr bgcolor="9fda69">  <td>21/05/21 13:58:23</td>   <td>25999</td> <td>&nbsp;</td><td title="&lt;&lt;LoginTest.Quit()[pri:0, instance:POMFramework.Test.LoginTest@73163d48]">&lt;&lt;Quit</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1089584667</td>   <td></td> </tr>
+<tr bgcolor="9fda69">  <td>21/05/21 13:57:23</td>   <td>-34188</td> <td>&nbsp;</td><td title="&gt;&gt;LoginTest.SetUp()[pri:0, instance:POMFramework.Test.LoginTest@73163d48]">&gt;&gt;SetUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1089584667</td>   <td></td> </tr>
+<tr bgcolor="9fda69">  <td>21/05/21 13:58:13</td>   <td>15487</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.editMyInfo()[pri:2, instance:POMFramework.Test.LoginTest@73163d48]">editMyInfo</td> 
+  <td>TestNG-test=Test-3@1708786808</td>   <td></td> </tr>
+<tr bgcolor="9fda69">  <td>21/05/21 13:58:22</td>   <td>24785</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.seeManageReviewsMyReviews()[pri:3, instance:POMFramework.Test.LoginTest@73163d48]">seeManageReviewsMyReviews</td> 
+  <td>TestNG-test=Test-4@1775322499</td>   <td></td> </tr>
 </table>
