--- a/test-output/index.html
+++ b/test-output/index.html
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">4 methods,   4 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -108,6 +108,16 @@
                       <span>
                         <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Suite" title="KEYWORDSFramework.Test.PrincipalTest" class="method navigator-link" hash-for-method="Principal_testcase">Principal_testcase</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="POMFramework.Test.LoginTest" class="method navigator-link" hash-for-method="editMyInfo">editMyInfo</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="POMFramework.Test.LoginTest" class="method navigator-link" hash-for-method="seeManageReviewsMyReviews">seeManageReviewsMyReviews</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Suite -->
@@ -133,6 +143,20 @@
                   <a name="LoginSuccess_testcase">
                   </a> <!-- LoginSuccess_testcase -->
                   <span class="method-name">LoginSuccess_testcase</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="editMyInfo">
+                  </a> <!-- editMyInfo -->
+                  <span class="method-name">editMyInfo</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="seeManageReviewsMyReviews">
+                  </a> <!-- seeManageReviewsMyReviews -->
+                  <span class="method-name">seeManageReviewsMyReviews</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -205,20 +229,28 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(4);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'Principal_testcase')
 data.setCell(0, 2, 'KEYWORDSFramework.Test.PrincipalTest')
-data.setCell(0, 3, 20216);
+data.setCell(0, 3, 23529);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'LoginSuccess_testcase')
 data.setCell(1, 2, 'POMFramework.Test.LoginTest')
-data.setCell(1, 3, 6712);
+data.setCell(1, 3, 15469);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'editMyInfo')
+data.setCell(2, 2, 'POMFramework.Test.LoginTest')
+data.setCell(2, 3, 9293);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'seeManageReviewsMyReviews')
+data.setCell(3, 2, 'POMFramework.Test.LoginTest')
+data.setCell(3, 3, 1200);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 26 seconds</span>
+              <span class="suite-total-time">Total running time: 49 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -244,26 +276,37 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
+              <div class="chronological-class-name">POMFramework.Test.LoginTest</div> <!-- chronological-class-name -->
+              <div class="configuration-test before">
+                <span class="method-name">SetUp</span>
+                <span class="method-start">0 ms</span>
+              </div> <!-- configuration-test before -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
               <div class="chronological-class-name">KEYWORDSFramework.Test.PrincipalTest</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">Principal_testcase</span>
-                <span class="method-start">0 ms</span>
+                <span class="method-start">10411 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">POMFramework.Test.LoginTest</div> <!-- chronological-class-name -->
-              <div class="configuration-method before">
-                <span class="method-name">SetUp</span>
-                <span class="method-start">20402 ms</span>
-              </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">LoginSuccess_testcase</span>
-                <span class="method-start">38012 ms</span>
+                <span class="method-start">34208 ms</span>
               </div> <!-- test-method -->
-              <div class="configuration-method after">
+              <div class="test-method">
+                <span class="method-name">editMyInfo</span>
+                <span class="method-start">49693 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">seeManageReviewsMyReviews</span>
+                <span class="method-start">58991 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-test after">
                 <span class="method-name">Quit</span>
-                <span class="method-start">44735 ms</span>
-              </div> <!-- configuration-method after -->
+                <span class="method-start">60205 ms</span>
+              </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
