--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -33,6 +33,14 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>editMyInfo</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>seeManageReviewsMyReviews</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>LoginSuccess_testcase</td>
 <td>&nbsp;</td></tr>
 <tr>
@@ -42,16 +50,8 @@
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
 <tr>
-<td>&nbsp;</td>
-<td>SetUp</td>
-<td>&nbsp;</td></tr>
-<tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>Quit</td>
-<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
