--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -33,15 +33,15 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>editMyInfo</td>
+<td>EditMyInfo</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>seeManageReviewsMyReviews</td>
+<td>LoginSuccess</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>LoginSuccess_testcase</td>
+<td>SeeManageReviewsMyReviews</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
