--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,13 +9,13 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">71.888</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">39.645</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">KEYWORDSFramework.Test.PrincipalTest</td><td><a href="#m0">Principal_testcase</a></td><td rowspan="1">1621633593339</td><td rowspan="1">35104</td></tr><tr class="passedodd"><td rowspan="3">POMFramework.Test.LoginTest</td><td><a href="#m1">LoginSuccess_testcase</a></td><td rowspan="1">1621633628661</td><td rowspan="1">8707</td></tr><tr class="passedodd"><td><a href="#m2">editMyInfo</a></td><td rowspan="1">1621633637383</td><td rowspan="1">12769</td></tr><tr class="passedodd"><td><a href="#m3">seeManageReviewsMyReviews</a></td><td rowspan="1">1621633650157</td><td rowspan="1">1412</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">KEYWORDSFramework.Test.PrincipalTest</td><td><a href="#m0">Principal_testcase</a></td><td rowspan="1">1621642522902</td><td rowspan="1">21001</td></tr><tr class="passedodd"><td rowspan="3">POMFramework.Test.LoginTest</td><td><a href="#m1">EditMyInfo</a></td><td rowspan="1">1621642552932</td><td rowspan="1">8370</td></tr><tr class="passedodd"><td><a href="#m2">LoginSuccess</a></td><td rowspan="1">1621642544118</td><td rowspan="1">8791</td></tr><tr class="passedodd"><td><a href="#m3">SeeManageReviewsMyReviews</a></td><td rowspan="1">1621642561312</td><td rowspan="1">1137</td></tr></tbody>
 </table>
 <h2>Test</h2><h3 id="m0">KEYWORDSFramework.Test.PrincipalTest#Principal_testcase</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">POMFramework.Test.LoginTest#LoginSuccess_testcase</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">POMFramework.Test.LoginTest#editMyInfo</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">POMFramework.Test.LoginTest#seeManageReviewsMyReviews</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">POMFramework.Test.LoginTest#EditMyInfo</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">POMFramework.Test.LoginTest#LoginSuccess</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">POMFramework.Test.LoginTest#SeeManageReviewsMyReviews</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
