--- a/test-output/index.html
+++ b/test-output/index.html
@@ -102,7 +102,12 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="POMFramework.Test.LoginTest" class="method navigator-link" hash-for-method="LoginSuccess_testcase">LoginSuccess_testcase</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="POMFramework.Test.LoginTest" class="method navigator-link" hash-for-method="EditMyInfo">EditMyInfo</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="POMFramework.Test.LoginTest" class="method navigator-link" hash-for-method="LoginSuccess">LoginSuccess</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -112,12 +117,7 @@
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="POMFramework.Test.LoginTest" class="method navigator-link" hash-for-method="editMyInfo">editMyInfo</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="POMFramework.Test.LoginTest" class="method navigator-link" hash-for-method="seeManageReviewsMyReviews">seeManageReviewsMyReviews</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="POMFramework.Test.LoginTest" class="method navigator-link" hash-for-method="SeeManageReviewsMyReviews">SeeManageReviewsMyReviews</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Suite -->
@@ -140,23 +140,23 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="LoginSuccess_testcase">
-                  </a> <!-- LoginSuccess_testcase -->
-                  <span class="method-name">LoginSuccess_testcase</span>
+                  <a name="EditMyInfo">
+                  </a> <!-- EditMyInfo -->
+                  <span class="method-name">EditMyInfo</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="editMyInfo">
-                  </a> <!-- editMyInfo -->
-                  <span class="method-name">editMyInfo</span>
+                  <a name="LoginSuccess">
+                  </a> <!-- LoginSuccess -->
+                  <span class="method-name">LoginSuccess</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="seeManageReviewsMyReviews">
-                  </a> <!-- seeManageReviewsMyReviews -->
-                  <span class="method-name">seeManageReviewsMyReviews</span>
+                  <a name="SeeManageReviewsMyReviews">
+                  </a> <!-- SeeManageReviewsMyReviews -->
+                  <span class="method-name">SeeManageReviewsMyReviews</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -233,24 +233,24 @@ data.addRows(4);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'Principal_testcase')
 data.setCell(0, 2, 'KEYWORDSFramework.Test.PrincipalTest')
-data.setCell(0, 3, 35104);
+data.setCell(0, 3, 21001);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'editMyInfo')
+data.setCell(1, 1, 'LoginSuccess')
 data.setCell(1, 2, 'POMFramework.Test.LoginTest')
-data.setCell(1, 3, 12769);
+data.setCell(1, 3, 8791);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'LoginSuccess_testcase')
+data.setCell(2, 1, 'EditMyInfo')
 data.setCell(2, 2, 'POMFramework.Test.LoginTest')
-data.setCell(2, 3, 8707);
+data.setCell(2, 3, 8370);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'seeManageReviewsMyReviews')
+data.setCell(3, 1, 'SeeManageReviewsMyReviews')
 data.setCell(3, 2, 'POMFramework.Test.LoginTest')
-data.setCell(3, 3, 1412);
+data.setCell(3, 3, 1137);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 57 seconds</span>
+              <span class="suite-total-time">Total running time: 39 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -277,36 +277,36 @@ return data;
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
               <div class="chronological-class-name">POMFramework.Test.LoginTest</div> <!-- chronological-class-name -->
-              <div class="configuration-test before">
+              <div class="configuration-suite before">
                 <span class="method-name">SetUp</span>
                 <span class="method-start">0 ms</span>
-              </div> <!-- configuration-test before -->
+              </div> <!-- configuration-suite before -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">KEYWORDSFramework.Test.PrincipalTest</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">Principal_testcase</span>
-                <span class="method-start">12639 ms</span>
+                <span class="method-start">10918 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">POMFramework.Test.LoginTest</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">LoginSuccess_testcase</span>
-                <span class="method-start">47961 ms</span>
+                <span class="method-name">LoginSuccess</span>
+                <span class="method-start">32134 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">editMyInfo</span>
-                <span class="method-start">56683 ms</span>
+                <span class="method-name">EditMyInfo</span>
+                <span class="method-start">40948 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">seeManageReviewsMyReviews</span>
-                <span class="method-start">69457 ms</span>
+                <span class="method-name">SeeManageReviewsMyReviews</span>
+                <span class="method-start">49328 ms</span>
               </div> <!-- test-method -->
-              <div class="configuration-test after">
+              <div class="configuration-suite after">
                 <span class="method-name">Quit</span>
-                <span class="method-start">70881 ms</span>
-              </div> <!-- configuration-test after -->
+                <span class="method-start">50514 ms</span>
+              </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
