--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,16 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9fda69">  <td>21/05/21 15:46:20</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;LoginTest.SetUp()[pri:0, instance:POMFramework.Test.LoginTest@73163d48]">&gt;&gt;SetUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1089584667</td>   <td></td> </tr>
-<tr bgcolor="b5e8bb">  <td>21/05/21 15:46:33</td>   <td>12624</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PrincipalTest.Principal_testcase()[pri:0, instance:KEYWORDSFramework.Test.PrincipalTest@58c34bb3]">Principal_testcase</td> 
-  <td>TestNG-test=Test-1@425229321</td>   <td></td> </tr>
-<tr bgcolor="9fda69">  <td>21/05/21 15:47:08</td>   <td>47944</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.LoginSuccess_testcase()[pri:1, instance:POMFramework.Test.LoginTest@73163d48]">LoginSuccess_testcase</td> 
-  <td>TestNG-test=Test-2@1881556171</td>   <td></td> </tr>
-<tr bgcolor="9fda69">  <td>21/05/21 15:47:17</td>   <td>56668</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.editMyInfo()[pri:2, instance:POMFramework.Test.LoginTest@73163d48]">editMyInfo</td> 
-  <td>TestNG-test=Test-3@1521802939</td>   <td></td> </tr>
-<tr bgcolor="9fda69">  <td>21/05/21 15:47:30</td>   <td>69442</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.seeManageReviewsMyReviews()[pri:3, instance:POMFramework.Test.LoginTest@73163d48]">seeManageReviewsMyReviews</td> 
-  <td>TestNG-test=Test-4@1848139534</td>   <td></td> </tr>
-<tr bgcolor="9fda69">  <td>21/05/21 15:47:31</td>   <td>70866</td> <td>&nbsp;</td><td title="&lt;&lt;LoginTest.Quit()[pri:0, instance:POMFramework.Test.LoginTest@73163d48]">&lt;&lt;Quit</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1089584667</td>   <td></td> </tr>
+<tr bgcolor="9fda69">  <td>21/05/21 18:15:12</td>   <td>0</td> <td title="&gt;&gt;LoginTest.SetUp()[pri:0, instance:POMFramework.Test.LoginTest@73163d48]">&gt;&gt;SetUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@314364096</td>   <td></td> </tr>
+<tr bgcolor="b5e8bb">  <td>21/05/21 18:15:22</td>   <td>10901</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PrincipalTest.Principal_testcase()[pri:0, instance:KEYWORDSFramework.Test.PrincipalTest@58c34bb3]">Principal_testcase</td> 
+  <td>TestNG-test=Test-1@14880004</td>   <td></td> </tr>
+<tr bgcolor="9fda69">  <td>21/05/21 18:15:44</td>   <td>32117</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.LoginSuccess()[pri:1, instance:POMFramework.Test.LoginTest@73163d48]">LoginSuccess</td> 
+  <td>TestNG-test=Test-2@1945159990</td>   <td></td> </tr>
+<tr bgcolor="9fda69">  <td>21/05/21 18:15:52</td>   <td>40931</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.EditMyInfo()[pri:2, instance:POMFramework.Test.LoginTest@73163d48]">EditMyInfo</td> 
+  <td>TestNG-test=Test-3@1553159386</td>   <td></td> </tr>
+<tr bgcolor="9fda69">  <td>21/05/21 18:16:01</td>   <td>49311</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.SeeManageReviewsMyReviews()[pri:3, instance:POMFramework.Test.LoginTest@73163d48]">SeeManageReviewsMyReviews</td> 
+  <td>TestNG-test=Test-4@528819831</td>   <td></td> </tr>
+<tr bgcolor="9fda69">  <td>21/05/21 18:16:02</td>   <td>50497</td> <td title="&lt;&lt;LoginTest.Quit()[pri:0, instance:POMFramework.Test.LoginTest@73163d48]">&lt;&lt;Quit</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@314364096</td>   <td></td> </tr>
 </table>
