Extent Report Added

--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,16 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9fda69">  <td>21/05/21 18:15:12</td>   <td>0</td> <td title="&gt;&gt;LoginTest.SetUp()[pri:0, instance:POMFramework.Test.LoginTest@73163d48]">&gt;&gt;SetUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@314364096</td>   <td></td> </tr>
-<tr bgcolor="b5e8bb">  <td>21/05/21 18:15:22</td>   <td>10901</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PrincipalTest.Principal_testcase()[pri:0, instance:KEYWORDSFramework.Test.PrincipalTest@58c34bb3]">Principal_testcase</td> 
-  <td>TestNG-test=Test-1@14880004</td>   <td></td> </tr>
-<tr bgcolor="9fda69">  <td>21/05/21 18:15:44</td>   <td>32117</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.LoginSuccess()[pri:1, instance:POMFramework.Test.LoginTest@73163d48]">LoginSuccess</td> 
-  <td>TestNG-test=Test-2@1945159990</td>   <td></td> </tr>
-<tr bgcolor="9fda69">  <td>21/05/21 18:15:52</td>   <td>40931</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.EditMyInfo()[pri:2, instance:POMFramework.Test.LoginTest@73163d48]">EditMyInfo</td> 
+<tr bgcolor="9fda69">  <td>21/05/21 19:19:56</td>   <td>0</td> <td title="&gt;&gt;LoginTest.SetUp()[pri:0, instance:POMFramework.Test.LoginTest@58c34bb3]">&gt;&gt;SetUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1215951090</td>   <td></td> </tr>
+<tr bgcolor="b5e8bb">  <td>21/05/21 19:20:07</td>   <td>11233</td> <td title="&gt;&gt;PrincipalTest.SetUp()[pri:0, instance:KEYWORDSFramework.Test.PrincipalTest@56a4479a]">&gt;&gt;SetUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1215951090</td>   <td></td> </tr>
+<tr bgcolor="b5e8bb">  <td>21/05/21 19:20:07</td>   <td>11372</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PrincipalTest.Principal_testcase()[pri:0, instance:KEYWORDSFramework.Test.PrincipalTest@56a4479a]">Principal_testcase</td> 
+  <td>TestNG-test=Test-1@1918059211</td>   <td></td> </tr>
+<tr bgcolor="9fda69">  <td>21/05/21 19:20:28</td>   <td>32178</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.LoginSuccess()[pri:1, instance:POMFramework.Test.LoginTest@58c34bb3]">LoginSuccess</td> 
+  <td>TestNG-test=Test-2@917569542</td>   <td></td> </tr>
+<tr bgcolor="9fda69">  <td>21/05/21 19:20:37</td>   <td>41094</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.EditMyInfo()[pri:2, instance:POMFramework.Test.LoginTest@58c34bb3]">EditMyInfo</td> 
   <td>TestNG-test=Test-3@1553159386</td>   <td></td> </tr>
-<tr bgcolor="9fda69">  <td>21/05/21 18:16:01</td>   <td>49311</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.SeeManageReviewsMyReviews()[pri:3, instance:POMFramework.Test.LoginTest@73163d48]">SeeManageReviewsMyReviews</td> 
+<tr bgcolor="9fda69">  <td>21/05/21 19:20:45</td>   <td>48973</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.SeeManageReviewsMyReviews()[pri:3, instance:POMFramework.Test.LoginTest@58c34bb3]">SeeManageReviewsMyReviews</td> 
   <td>TestNG-test=Test-4@528819831</td>   <td></td> </tr>
-<tr bgcolor="9fda69">  <td>21/05/21 18:16:02</td>   <td>50497</td> <td title="&lt;&lt;LoginTest.Quit()[pri:0, instance:POMFramework.Test.LoginTest@73163d48]">&lt;&lt;Quit</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@314364096</td>   <td></td> </tr>
+<tr bgcolor="9fda69">  <td>21/05/21 19:20:46</td>   <td>50123</td> <td title="&lt;&lt;LoginTest.Quit()[pri:0, instance:POMFramework.Test.LoginTest@58c34bb3]">&lt;&lt;Quit</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1215951090</td>   <td></td> </tr>
+<tr bgcolor="b5e8bb">  <td>21/05/21 19:20:48</td>   <td>52052</td> <td title="&lt;&lt;PrincipalTest.Flush()[pri:0, instance:KEYWORDSFramework.Test.PrincipalTest@56a4479a]">&lt;&lt;Flush</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1215951090</td>   <td></td> </tr>
 </table>
