--- a/test-output/index.html
+++ b/test-output/index.html
@@ -233,24 +233,24 @@ data.addRows(4);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'Principal_testcase')
 data.setCell(0, 2, 'KEYWORDSFramework.Test.PrincipalTest')
-data.setCell(0, 3, 21001);
+data.setCell(0, 3, 20604);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'LoginSuccess')
 data.setCell(1, 2, 'POMFramework.Test.LoginTest')
-data.setCell(1, 3, 8791);
+data.setCell(1, 3, 8885);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'EditMyInfo')
 data.setCell(2, 2, 'POMFramework.Test.LoginTest')
-data.setCell(2, 3, 8370);
+data.setCell(2, 3, 7871);
 data.setCell(3, 0, 3)
 data.setCell(3, 1, 'SeeManageReviewsMyReviews')
 data.setCell(3, 2, 'POMFramework.Test.LoginTest')
-data.setCell(3, 3, 1137);
+data.setCell(3, 3, 1094);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 39 seconds</span>
+              <span class="suite-total-time">Total running time: 38 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -284,28 +284,39 @@ return data;
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">KEYWORDSFramework.Test.PrincipalTest</div> <!-- chronological-class-name -->
+              <div class="configuration-suite before">
+                <span class="method-name">SetUp</span>
+                <span class="method-start">11260 ms</span>
+              </div> <!-- configuration-suite before -->
               <div class="test-method">
                 <span class="method-name">Principal_testcase</span>
-                <span class="method-start">10918 ms</span>
+                <span class="method-start">11399 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">POMFramework.Test.LoginTest</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">LoginSuccess</span>
-                <span class="method-start">32134 ms</span>
+                <span class="method-start">32205 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">EditMyInfo</span>
-                <span class="method-start">40948 ms</span>
+                <span class="method-start">41122 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">SeeManageReviewsMyReviews</span>
-                <span class="method-start">49328 ms</span>
+                <span class="method-start">49000 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-suite after">
                 <span class="method-name">Quit</span>
-                <span class="method-start">50514 ms</span>
+                <span class="method-start">50150 ms</span>
+              </div> <!-- configuration-suite after -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">KEYWORDSFramework.Test.PrincipalTest</div> <!-- chronological-class-name -->
+              <div class="configuration-suite after">
+                <span class="method-name">Flush</span>
+                <span class="method-start">52078 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
